2019-04-03      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* libgm2/Makefile.in:  regenerated.
	* libgm2/aclocal.m4:  regenerated.
	* libgm2/autogen.sh:  removed version numbers.
	* libgm2/config/libtool.m4:  new version of the file
	  taken from libgo/config.
	* libgm2/configure:  regenerated.
	* libgm2/configure.ac:  updated version numbers.
	* libgm2/libcor/Makefile.in:  regenerated.
	* libgm2/libiso/Makefile.in:  regenerated.
	* libgm2/liblog/Makefile.in:  regenerated.
	* libgm2/libmin/Makefile.in:  regenerated.
	* libgm2/libpim/Makefile.in:  regenerated.
	* libgm2/libulm/Makefile.in:  regenerated.

2019-03-29      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* libgm2/configure:  regenerated.
	* libgm2/configure.ac:  implement --enable-libpth-m2
	* libgm2/libpth/Makefile.am:  pass FLAGS_TO_PASS to make.
          move install rules into pth subdirectory.
	* libgm2/libpth/pth/Makefile.am:  added install rules.

2018-11-27      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* libgm2/libpim/wrapc.c:  reformatted according to GNU
          coding standards.  Also defended against macro omissions.
	* libgm2/libiso/wraptime.c:  fixed function declaration
	  and erroneous return value.

2018-04-16      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* libgm2/Makefile.am:  specify the libtool location.
	* libgm2/Makefile.in:  regenerated.
	* libgm2/aclocal.m4:  regenerated.
	* libgm2/autogen.sh:  corrected script to regenerate
          using the correct macros and versions of autoconf tools.
	* libgm2/configure:  regenerated.
	* libgm2/configure.ac:  regenerated.
	* libgm2/libcor/Makefile.in:  regenerated.
	* libgm2/libiso/Makefile.in:  regenerated.
	* libgm2/liblog/Makefile.in:  regenerated.
	* libgm2/libmin/Makefile.in:  regenerated.
	* libgm2/libpim/Makefile.in:  regenerated.
	* libgm2/libulm/Makefile.in:  regenerated.

2018-04-14      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* libgm2/Makefile.am:  changed to reference the config directory.