@@ -1,3 +1,7 @@
+2019-07-09      Rainer Orth <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* libgm2/Makefile.am:   (multilib.am) included.
+
 2019-04-03      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* libgm2/Makefile.in:  regenerated.
